--- a/views/companyhomePage.ejs
+++ b/views/companyhomePage.ejs
@@ -1,75 +1,169 @@
 <%- include('header') %>
 <%- include('MenuBarCustomer') %>
-<div class=" container-fluid">
+<div class="container-fluid"  style="background-image: url(<%=profile.image1%>);">
      
-    <div class="container-fluid" >
-        <div class="container-fluid " >
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100 " style="position: relative; height:500px ;  background-size: cover; background-position: center; overflow: hidden;"  src="<%=profile.image1%>" alt="First slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" style="position: relative; height: 500px; background-size: cover; background-position: center; overflow: hidden;" src="<%=profile.image2%>" alt="Second slide">
-              </div>
+    <div class="container-flex  border border-primary " >
+         <div class="container-fluid  align-content-start " style="height: 400px; " >
+          
+          <div  >
             
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
+
+           
+           
+        
         </div>
     </div>
-    <div class="container-fluid">
-        
-        <div class="container-fluid col-8 " style="background-color: rgba(48, 41, 64, 0.701);" >
-          <div class="container-fluid justify-content-start" style="background-color: rgba(41, 64, 41, 0.701) ; flex-wrap: wrap ;">
-           
-            <% tariffpackages.forEach(element => { %>
+    <div class="d-flex justify-content-center" style=" overflow: scroll; background-color: rgba(77, 103, 77, 0.923);">
+      
+      <% tariffPackages.forEach(element => { %>
+          
+
+          <div class="btn p-1 col-2" style="height: 100% ;">
+            <% if (element.deleted) { %>
+              <div class="card text-white bg-secondary mb-2" style="max-width: 18rem;">
+            <% } else { %>
+              <div class="card text-white bg-success mb-3" style="max-width: 18rem;">
+            <% } %>
+            
+              <div class="card-header"><%= element.tariffName %> </div>
+              <div class="card-body">
                
-              <div class="card  text-white bg-secondary mb-3"  ">
-                <div class="card-header"><%= element.tariffName %></div>
-                <div class="card-body justify-content-start">
-                <div class="d-flex  "> 
-                  <button class=" btn col-2 "   " >Rent:</button>  
-                  <input class="btn " type="number" readonly="true" name="Rent" id="idTariffName" value="<%= element.roomRentSingle %>" >
-                   
-                </div>
-                <div class="d-flex justify-content-start"> 
-                  <button class="btn col-2  ">SpecialRent:</button>  
-                  <input class="btn" type="number" readonly="true" name="SpecialRent" id="idSpecialRent" value="<%= element.SpecialRent  %>" >
-                </div>
-                <div class="d-flex justify-content-start"> 
-                  <button class="btn   ">Discription:</button>  
-                  <textarea class="form-control btn" id="idCompanydiscription" name="discription" rows="8" cols="50"  > <%= element.Discription %></textarea>
-                </div>
-                
-              </div class="col-2">
-              <div class="ml-auto">
-                <button class="btn btn-light" value="<%= element.tariffIndex %>" > EDIT</button>
-                <button class="btn btn-light" value="<%= element.tariffIndex %>" > SAVE</button>
-                <button class="btn btn-light" value="<%= element.tariffIndex %>" > DELETE</button>
-            </div>
+                <h5 class="card-title">Offer Rate :<%= element.SpecialRent %>/-</h5>  
+                <small> (Room rent : <%= element.roomRentSingle %>)</small> <br>
+                <small> Extra Person : <%= element.extraPerson %></small>
+               
               </div>
-              
-            <% }) %>
+              <div class="container-flex d-flex">
+                <button class="btn btn-light   m-1 me-4 " data-bs-toggle="modal" data-bs-target="#<%= element.tariffName%>" > OPEN</button>
+                <% if (element.deleted) { %>
+                  <button class="btn btn-outline-light   m-1 me-4"> ACTIVATE </button>
+                  <% } else   { %>
+                    <button class="btn btn-outline-warning   m-1 me-4"> FREEZE </button>
+                 <% } %>  
+              </div>
+            </div>
+            
+          </div> 
+         
+      <% }) %>
+    </div>
+    <div class="container-flex d-flex border border-primary ">
+        <div class="container-flex col-2   border border-primary" >
+        </div>
+        <div class="container-flex col-8 border border-primary "  >
+        <div class="container-flex justify-content-start " style=" flex-wrap: wrap  ; overflow: scroll  ; height: 500px ; ;">
+           
+          </div>
+        </div>
+        <div class="container-flex col-2   border border-primary"  >
           
            
-         
-
-
-
-          </div>
-        </div>
-        <div class="container-fluid col-2" style="background-color: rgba(64, 41, 50, 0.703);">
-       
         </div>
     </div>
-</div>
 
+    </div>
+</div> 
+<!-- modals -->
+
+<% tariffPackages.forEach(element => { %>
+ <!-- Scrollable modal -->
+  <div class="modal fade  mr-2 " id="<%=element.tariffName%>" tabindex="-1" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content" style="background-color: rgba(230, 178, 66, 0.379) ;">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">
+            <%=element.tariffName%>
+          </h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="">
+
+            <div class="container-flex d-flex ">
+              <div class="container-fluid col-4">
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-4" id="basic-addon1">Name</span>
+                    <input name="tariffname" id="idtariffname" type="text" class="form-control" placeholder="tariffname"
+                        aria-label="Username" aria-describedby="basic-addon1" value="<%=element.tariffName  %>">
+                </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-4" id="basic-addon1">Rent </span>
+                    <input name="Rent-Single" id="idRent-Single" type="number" class="form-control"
+                        placeholder="Room number" aria-label="Username" aria-describedby="basic-addon1" value="<%=element.roomRentSingle  %>">
+                </div>
+                <div class="input-group mb-2">
+                  <span class="input-group-text col-4" id="basic-addon1">Offer Price </span>
+                  <input name="Rent-Single" id="idRent-Single" type="number" class="form-control"
+                      placeholder="Room number" aria-label="Username" aria-describedby="basic-addon1" value="<%=element.SpecialRent  %>">
+              </div>
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-4" id="basic-addon1">Extra person</span>
+                    <input name="ExtraPerson" id="idExtraPerson" type="number" class="form-control"
+                        placeholder="ExtraPerson" aria-label="ExtraPerson" aria-describedby="basic-addon1"  value="<%=element.extraPerson  %>">
+                </div>
+                
+                <div class="input-group mb-2">
+                   
+                  <label class="input-group-text col-4" id="basic-addon1" for="#idincludeChild">includeChild</label>
+                  <div class="form-control"  >
+                    <input name="includeChild" id="idincludeChild" type="checkbox" class="form-check-input" <%= element.includeChild ? 'checked' : '' %>
+                    aria-label="includeChild" aria-describedby="basic-addon1">
+                  </div>
+                </div>
+                 
+
+                <div class="input-group mb-2">
+                    <span class="input-group-text col-4" id="basic-addon1">Item Name    </span>
+                    <input name="Itemname" id="IdItemname" type="text" class="form-control" placeholder="Item Name "
+                        aria-label="Username" aria-describedby="basic-addon1" value="<%=element.itemname%>">
+                </div>
+                <div class="input-group mb-2">
+                  <span class="input-group-text col-4" id="basic-addon1">HSN Code  </span>
+                  <input name="Hsncode" id="IdHsncode" type="text"   class="form-control" placeholder="HSN Code "
+                      aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text col-4" id="basic-addon1">Tax Rate    </span>
+                  <input name="Taxrate" id="IdTaxrate" type="text"   class="form-control" placeholder="Tax Rate"
+                      aria-label="Username" aria-describedby="basic-addon1" value="<%=element.tax%>">
+              </div>
+              <div class="input-group mb-2">
+                  <span class="input-group-text col-4" id="basic-addon1">Tariff Index   </span>
+                  <input name="TariffIndex" id="IdTariffIndex" type="text" readonly="true"  class="form-control" placeholder="tariffId"
+                      aria-label="Username" aria-describedby="basic-addon1" value="<%=element.tariffIndex%>">
+              </div>
+              <div class="input-group mb-2">
+                <span class="input-group-text col-4" id="basic-addon1">default Plan   </span>
+                <input name="DefaultPlan" id="IdDefaultPlan" type="text" readonly="true"  class="form-control" placeholder="tariffId"
+                    aria-label="Username" aria-describedby="basic-addon1" value="<%=element.itemname%>">
+            </div>
+              
+            </div>
+            <div class="container-fluid col-4">
+              <div class="input-group mb-2">
+                <span class="input-group-text col-4" id="basic-addon1">Plan Discription</span>
+                <textarea class="form-control" id="iddiscription"  name="discription" rows="15rem" cols="100"> <%=element.Discription %></textarea>
+        
+        </div>
+            </div>
+            <div class="container-fluid col-4">
+                
+            </div>
+            </div>
+          </div>
+        </div>..
+        <div class="modal-footer">
+          <button type="button" class="btn btn-warning bi bi-pencil" data-bs-dismiss="modal">EDIT </button>
+          <button type="button" class="btn btn-secondary bi bi-x-octagon" data-bs-dismiss="modal">CANCEL</button>
+          <button type="button" onclick="saveTariffToCompanies()" value="<%= JSON.stringify(element) %>" class="btn btn-success bi bi-send">SAVE</button>
+        </div>
+      </div>
+    </div>
+  </div>
+<% }) %>
+
+
+<script src="/Script/Companies.js"> </script>
 <%- include('footer') %>
